updated items page

--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-<img src="assets/logo.png" class="logo" alt="Logo">
+<img src="assets/logo.png" class="logo" alt="In It for the Dough Logo">
 <nav>
 <a href="index.html">Home</a>
 <a href="items.html">What I Bake</a>
@@ -21,18 +21,69 @@
 
 <main class="items-container">
 <h2>What I Can Bake for You</h2>
+<p class="menu-note">Menu items are based on custom orders and availability. Message me for details!</p>
 
 
+<section class="menu-section">
+<h3>Classic Cakes & Cheesecakes</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=bread" class="item-card">Breads</a>
-<a href="item-detail.html?item=cakes" class="item-card">Cakes</a>
-<a href="item-detail.html?item=cookies" class="item-card">Cookies</a>
+<a href="item-detail.html?item=cakes" class="item-card">
+<img src="assets/icons/cake.png" alt="Cake icon">
+<span>Classic Cakes & Cheesecakes</span>
+</a>
 </div>
+</section>
+
+
+<section class="menu-section">
+<h3>Breads</h3>
+<div class="item-grid">
+<a href="item-detail.html?item=breads" class="item-card">
+<img src="assets/icons/bread.png" alt="Bread icon">
+<span>Breads</span>
+</a>
+</div>
+</section>
+
+
+<section class="menu-section">
+<h3>Specialty Items</h3>
+<div class="item-grid">
+<a href="item-detail.html?item=specialty" class="item-card">
+<img src="assets/icons/pastry.png" alt="Pastry icon">
+<span>Specialty Treats</span>
+</a>
+</div>
+</section>
+
+
+<section class="menu-section">
+<h3>Cupcakes</h3>
+<div class="item-grid">
+<a href="item-detail.html?item=cupcakes" class="item-card">
+<img src="assets/icons/cupcake.png" alt="Cupcake icon">
+<span>Cupcakes</span>
+</a>
+</div>
+</section>
+
+
+<section class="menu-section">
+<h3>Cookies</h3>
+<div class="item-grid">
+<a href="item-detail.html?item=cookies" class="item-card">
+<img src="assets/icons/cookie.png" alt="Cookie icon">
+<span>Cookies</span>
+</a>
+</div>
+</section>
+
+
 </main>
 
 
 <footer>
-<p>Inventory varies based on orders — message me for availability!</p>
+<p>© 2026 In It for the Dough</p>
 </footer>
 
 
