Update logo images and enhance item detail rendering

--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 
 
 <header class="navbar">
-<img src="assets/logo.png" class="logo" alt="Logo">
-<nav>
-<a href="index.html">Home</a>
-<a href="items.html">What I Bake</a>
-</nav>
+  <img src="assets/InitfortheDoughLogo.jpg" class="logo" alt="Logo">
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="items.html">What I Bake</a>
+  </nav>
 </header>
 
 
@@ -39,6 +39,6 @@
 </main>
 
 
-<script src="js/script.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
