--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 
 <header class="navbar">
-<img src="assets/logo.png" alt="In It for the Dough Logo" class="logo">
-<nav>
-<a href="index.html">Home</a>
-<a href="items.html">What I Bake</a>
-<a href="contact.html">Contact</a>
-</nav>
+  <img src="assets/InitfortheDoughLogo.jpg" class="logo" alt="In It for the Dough Logo">
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="items.html">What I Bake</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 
@@ -31,6 +31,13 @@ Let me feed you — you won't be disappointed!!!!
 <a href="contact.html" class="btn secondary">Custom Orders</a>
 </div>
 </section>
+
+
+<div class="item-grid">
+  <a href="item-detail.html?item=cakes" class="item-card">
+    <span>Classic Cakes & Cheesecakes</span>
+  </a>
+</div>
 
 
 <footer>
