--- a/item-detail.html
+++ b/item-detail.html
@@ -10,16 +10,16 @@
 
 
 <header class="navbar">
-<img src="assets/logo.png" class="logo" alt="Logo">
-<nav>
-<a href="items.html">← Back</a>
-</nav>
+  <img src="assets/InitfortheDoughLogo.jpg" class="logo" alt="Logo">
+  <nav>
+    <a href="items.html">← Back</a>
+  </nav>
 </header>
 
 
 <main class="detail-container" id="itemDetail"></main>
 
 
-<script src="js/script.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
