--- a/items.html
+++ b/items.html
@@ -10,12 +10,12 @@
 
 
 <header class="navbar">
-<img src="assets/logo.png" class="logo" alt="In It for the Dough Logo">
-<nav>
-<a href="index.html">Home</a>
-<a href="items.html">What I Bake</a>
-<a href="contact.html">Contact</a>
-</nav>
+  <img src="assets/InitfortheDoughLogo.jpg" alt="In It for the Dough Logo" class="logo">
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="items.html">What I Bake</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 
