Fix image tag order and remove unused icons from items page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDoughLogo.jpg" class="logo" alt="In It for the Dough Logo">
+  <img src="assets/InitfortheDoughLogo.jpg" alt="In It for the Dough Logo" class="logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
@@ -31,13 +31,6 @@ Let me feed you — you won't be disappointed!!!!
 <a href="contact.html" class="btn secondary">Custom Orders</a>
 </div>
 </section>
-
-
-<div class="item-grid">
-  <a href="item-detail.html?item=cakes" class="item-card">
-    <span>Classic Cakes & Cheesecakes</span>
-  </a>
-</div>
 
 
 <footer>
