--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDoughLogo.jpg" alt="In It for the Dough Logo" class="logo">
+  <img src="assets/InitfortheDoughLogo.jpg" class="logo" alt="In It for the Dough Logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
@@ -28,7 +28,6 @@
 <h3>Classic Cakes & Cheesecakes</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cakes" class="item-card">
-<img src="assets/icons/cake.png" alt="Cake icon">
 <span>Classic Cakes & Cheesecakes</span>
 </a>
 </div>
@@ -39,7 +38,6 @@
 <h3>Breads</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=breads" class="item-card">
-<img src="assets/icons/bread.png" alt="Bread icon">
 <span>Breads</span>
 </a>
 </div>
@@ -50,7 +48,6 @@
 <h3>Specialty Items</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=specialty" class="item-card">
-<img src="assets/icons/pastry.png" alt="Pastry icon">
 <span>Specialty Treats</span>
 </a>
 </div>
@@ -61,7 +58,6 @@
 <h3>Cupcakes</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cupcakes" class="item-card">
-<img src="assets/icons/cupcake.png" alt="Cupcake icon">
 <span>Cupcakes</span>
 </a>
 </div>
@@ -72,7 +68,6 @@
 <h3>Cookies</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cookies" class="item-card">
-<img src="assets/icons/cookie.png" alt="Cookie icon">
 <span>Cookies</span>
 </a>
 </div>
