Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDough-Logo.jpg" alt="In It for the Dough Logo" class="logo">
+  <img src="assets/InitfortheDoughLogo.png" alt="In It for the Dough Logo" class="logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
