--- a/item-detail.html
+++ b/item-detail.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDough-Logo.jpg" class="logo" alt="Logo">
+  <img src="assets/InitfortheDoughLogo.png" class="logo" alt="Logo">
   <nav>
     <a href="items.html">← Back</a>
   </nav>
