--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDough-Logo.jpg" class="logo" alt="In It for the Dough Logo">
+  <img src="assets/InitfortheDoughLogo.png" class="logo" alt="In It for the Dough Logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
