--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDough-Logo.jpg" class="logo" alt="Logo">
+  <img src="assets/InitfortheDoughLogo.png" class="logo" alt="Logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
