Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDoughLogo.png" alt="In It for the Dough Logo" class="logo">
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="items.html">What I Bake</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+<img src="assets/InitfortheDoughLogo.png" alt="In It for the Dough Logo" class="logo">
+<nav>
+<a href="index.html">Home</a>
+<a href="items.html">What I Bake</a>
+<a href="contact.html">Contact</a>
+</nav>
 </header>
 
 
-<section class="hero">
+<section class="hero-split">
+<div class="hero-left">
 <h1>In It for the Dough</h1>
 <p class="tagline">
-I am a Mom trying to turn a hobby into dough!!! Fresh baked sourdough breads,
-sandwich bread, desserts, and all around delicious food!! I love baking and feeding people!!
-Let me feed you — you won't be disappointed!!!!
+I am a mom turning a passion for baking into something special. From fresh baked sourdough and sandwich breads to desserts and all-around delicious food, everything I make is baked with love.
+<br><br>
+I truly love baking and feeding people — let me feed you! You won’t be disappointed.
 </p>
-<div class="cta-buttons">
-<a href="items.html" class="btn">View What I Bake</a>
-<a href="contact.html" class="btn secondary">Custom Orders</a>
+</div>
+
+
+<div class="hero-right">
+<a href="items.html" class="btn large">What I Bake</a>
+<a href="contact.html" class="btn secondary large">Contact Me</a>
 </div>
 </section>
 
