--- a/items.html
+++ b/items.html
@@ -28,6 +28,7 @@
 <h3>Classic Cakes & Cheesecakes</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cakes" class="item-card">
+    <img src="assets/birthday-cake.png" alt="Cakes and Cheesecakes">
 <span>Classic Cakes & Cheesecakes</span>
 </a>
 </div>
@@ -38,6 +39,7 @@
 <h3>Breads</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=breads" class="item-card">
+    <img src="assets/bread.png" alt="Breads">
 <span>Breads</span>
 </a>
 </div>
@@ -58,6 +60,7 @@
 <h3>Cupcakes</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cupcakes" class="item-card">
+    <img src="assets/cup-cake.png" alt="Cupcakes">
 <span>Cupcakes</span>
 </a>
 </div>
@@ -68,6 +71,7 @@
 <h3>Cookies</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=cookies" class="item-card">
+    <img src="assets/cookie.png" alt="Cookies">
 <span>Cookies</span>
 </a>
 </div>
