--- a/item-detail.html
+++ b/item-detail.html
@@ -6,7 +6,7 @@
 <title>Item Details</title>
 <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="detail-page">
 
 
 <header class="navbar">
