Update item card styles for improved appearance and accessibility

--- a/items.html
+++ b/items.html
@@ -27,7 +27,7 @@
 <section class="menu-section">
 <h3>Classic Cakes & Cheesecakes</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=cakes" class="item-card">
+<a href="item-detail.html?item=cakes" class="item-card" role="button" aria-label="Classic Cakes & Cheesecakes">
     <img src="assets/birthday-cake.png" alt="Cakes and Cheesecakes">
 <span>Classic Cakes & Cheesecakes</span>
 </a>
@@ -38,7 +38,7 @@
 <section class="menu-section">
 <h3>Breads</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=breads" class="item-card">
+<a href="item-detail.html?item=breads" class="item-card" role="button" aria-label="Breads">
     <img src="assets/bread.png" alt="Breads">
 <span>Breads</span>
 </a>
@@ -49,7 +49,7 @@
 <section class="menu-section">
 <h3>Specialty Items</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=specialty" class="item-card">
+<a href="item-detail.html?item=specialty" class="item-card secondary" role="button" aria-label="Specialty Treats">
 <span>Specialty Treats</span>
 </a>
 </div>
@@ -59,7 +59,7 @@
 <section class="menu-section">
 <h3>Cupcakes</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=cupcakes" class="item-card">
+<a href="item-detail.html?item=cupcakes" class="item-card" role="button" aria-label="Cupcakes">
     <img src="assets/cup-cake.png" alt="Cupcakes">
 <span>Cupcakes</span>
 </a>
@@ -70,7 +70,7 @@
 <section class="menu-section">
 <h3>Cookies</h3>
 <div class="item-grid">
-<a href="item-detail.html?item=cookies" class="item-card">
+<a href="item-detail.html?item=cookies" class="item-card" role="button" aria-label="Cookies">
     <img src="assets/cookie.png" alt="Cookies">
 <span>Cookies</span>
 </a>
