Refactor code structure for improved readability and maintainability

--- a/items.html
+++ b/items.html
@@ -50,6 +50,7 @@
 <h3>Specialty Items</h3>
 <div class="item-grid">
 <a href="item-detail.html?item=specialty" class="item-card secondary" role="button" aria-label="Specialty Treats">
+    <img src="assets/specialty.png" alt="Specialty Treats">
 <span>Specialty Treats</span>
 </a>
 </div>
