--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="hero-left">
 <h1>In It for the Dough</h1>
 <p class="tagline">
-I am a mom turning a passion for baking into something special. From fresh baked sourdough and sandwich breads to desserts and all-around delicious food, everything I make is baked with love.
+I'm just a mom turning a passion for baking into something special. From fresh baked sourdough and sandwich breads to desserts and all-around delicious food, everything I make is baked with love.
 <br><br>
 I truly love baking and feeding people — let me feed you! You won’t be disappointed.
 </p>
