Add comments for clarity in HTML, CSS, and JavaScript files

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
 <h2>Contact Me</h2>
 
 
+<!-- Social links: icon buttons linking to social profiles; edit SVGs here -->
 <div class="social-links">
   <a class="social-btn instagram" href="https://www.instagram.com/initforthedough/" target="_blank" rel="noopener noreferrer" aria-label="Visit our Instagram">
     <!-- Instagram icon -->
@@ -42,6 +43,7 @@
 </div>
 
 
+<!-- Contact form (id="contactForm") — EmailJS integration configured in js/scripts.js -->
 <form id="contactForm">
 <input type="text" name="name" placeholder="Your Name" required>
 <input type="tel" name="phone" placeholder="Phone Number" required>
