--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 
+<!-- Site header / primary navigation — edit links here -->
 <header class="navbar">
 <img src="assets/InitfortheDoughLogo.png" alt="In It for the Dough Logo" class="logo">
 <nav>
@@ -19,6 +20,7 @@
 </header>
 
 
+<!-- Hero section: two-column layout (text left, CTAs on right) -->
 <section class="hero-split">
 <div class="hero-left">
 <h1>In It for the Dough</h1>
@@ -37,6 +39,7 @@ I truly love baking and feeding people — let me feed you! You won’t be disap
 </section>
 
 
+<!-- Site footer (simple) -->
 <footer>
 <p>© 2026 In It for the Dough</p>
 </footer>
