--- a/item-detail.html
+++ b/item-detail.html
@@ -17,9 +17,11 @@
 </header>
 
 
+<!-- Item detail placeholder — populated by js/scripts.js based on ?item= query parameter -->
 <main class="detail-container" id="itemDetail"></main>
 
 
+<!-- Scripts: handles item rendering and contact form behavior -->
 <script src="js/scripts.js"></script>
 </body>
 </html>
