--- a/items.html
+++ b/items.html
@@ -9,6 +9,7 @@
 <body>
 
 
+<!-- Site header / primary navigation — edit links here -->
 <header class="navbar">
   <img src="assets/InitfortheDoughLogo.png" class="logo" alt="In It for the Dough Logo">
   <nav>
@@ -24,9 +25,11 @@
 <p class="menu-note">Menu items are based on custom orders and availability. Message me for details!</p>
 
 
+<!-- Menu section: Classic Cakes & Cheesecakes — update title and cards here -->
 <section class="menu-section">
 <h3>Classic Cakes & Cheesecakes</h3>
 <div class="item-grid">
+<!-- Item card — clickable card linking to detail page (update href query param to match items in js/scripts.js) -->
 <a href="item-detail.html?item=cakes" class="item-card" role="button" aria-label="Classic Cakes & Cheesecakes">
     <img src="assets/birthday-cake.png" alt="Cakes and Cheesecakes">
 <span>Classic Cakes & Cheesecakes</span>
@@ -35,9 +38,11 @@
 </section>
 
 
+<!-- Menu section: Breads -->
 <section class="menu-section">
 <h3>Breads</h3>
 <div class="item-grid">
+<!-- Item card — clickable card linking to detail page (update href query param to match items in js/scripts.js) -->
 <a href="item-detail.html?item=breads" class="item-card" role="button" aria-label="Breads">
     <img src="assets/bread.png" alt="Breads">
 <span>Breads</span>
@@ -46,9 +51,11 @@
 </section>
 
 
+<!-- Menu section: Specialty Items -->
 <section class="menu-section">
 <h3>Specialty Items</h3>
 <div class="item-grid">
+<!-- Item card — clickable card linking to detail page (update href query param to match items in js/scripts.js) -->
 <a href="item-detail.html?item=specialty" class="item-card secondary" role="button" aria-label="Specialty Treats">
     <img src="assets/specialty.png" alt="Specialty Treats">
 <span>Specialty Treats</span>
@@ -57,9 +64,11 @@
 </section>
 
 
+<!-- Menu section: Cupcakes -->
 <section class="menu-section">
 <h3>Cupcakes</h3>
 <div class="item-grid">
+<!-- Item card — clickable card linking to detail page (update href query param to match items in js/scripts.js) -->
 <a href="item-detail.html?item=cupcakes" class="item-card" role="button" aria-label="Cupcakes">
     <img src="assets/cup-cake.png" alt="Cupcakes">
 <span>Cupcakes</span>
@@ -68,9 +77,11 @@
 </section>
 
 
+<!-- Menu section: Cookies -->
 <section class="menu-section">
 <h3>Cookies</h3>
 <div class="item-grid">
+<!-- Item card — clickable card linking to detail page (update href query param to match items in js/scripts.js) -->
 <a href="item-detail.html?item=cookies" class="item-card" role="button" aria-label="Cookies">
     <img src="assets/cookie.png" alt="Cookies">
 <span>Cookies</span>
@@ -82,6 +93,7 @@
 </main>
 
 
+<!-- Site footer (simple) -->
 <footer>
 <p>© 2026 In It for the Dough</p>
 </footer>
