--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 
 
 <header class="navbar">
-  <img src="assets/InitfortheDoughLogo.png " class="logo" alt="Logo">
+  <img src="assets/InitfortheDoughLogo.png" class="logo" alt="In It for the Dough Logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="items.html">What I Bake</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
@@ -55,5 +56,8 @@
 
 
 <script src="js/scripts.js"></script>
+<footer class="footer">
+  <p>© 2026 In It for the Dough · Custom baked goods made with love</p>
+</footer>
 </body>
 </html>
