Fix script source path in item detail page

--- a/item-detail.html
+++ b/item-detail.html
@@ -25,7 +25,7 @@
   <p>© 2026 In It for the Dough · Custom baked goods made with love</p>
 </footer>
 
-<script src="scripts.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 
 </html>
