--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <span class="sr-only">Instagram</span>
   </a>
 
-  <a class="social-btn facebook" href="https://www.facebook.com/profile.php?id=61582263127768" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook">
+  <a class="social-btn facebook" href="https://www.https://www.facebook.com/lorielovesbaking" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook">
     <!-- Facebook icon -->
     <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
       <path d="M22 12a10 10 0 1 0-11.5 9.9v-7h-2.1V12h2.1V9.6c0-2.1 1.3-3.3 3.2-3.3.9 0 1.8.1 1.8.1v2h-1c-1 0-1.3.6-1.3 1.2V12h2.3l-.4 2.9h-1.9v7A10 10 0 0 0 22 12z"/>
