--- a/contact.html
+++ b/contact.html
@@ -47,16 +47,16 @@
 <!-- Contact form (id="contactForm") — EmailJS integration configured in js/scripts.js -->
 <form id="contactForm">
 <label for="name">Name</label>
-<input type="text" name="name" placeholder="from_name" required>
+<input type="text" name="name" placeholder="Name" required>
 
 <label for="phone">Phone Number</label>
-<input type="tel" name="phone" placeholder="phone_number" required>
+<input type="tel" name="phone" placeholder="Phone Number" required>
 
 <label for="email">Email</label>
-<input type="email" name="email" placeholder="reply_to" required>
+<input type="email" name="email" placeholder="Email" required>
 
 <label for="message">Questions or custom requests</label>
-<textarea name="message" placeholder="message" rows="5" required></textarea>
+<textarea name="message" placeholder="Message" rows="5" required></textarea>
 
 <button type="submit">Send Message</button>
 </form>
