Added a gallery page and an auto-scroller for the home page

--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,11 @@
 <header class="navbar">
   <img src="assets/InitfortheDoughLogo.png" class="logo" alt="In It for the Dough Logo">
   <nav>
-    <a href="index.html">Home</a>
-    <a href="items.html">What I Bake</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <a href="index.html">Home</a>
+  <a href="items.html">What I Bake</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="contact.html">Contact</a>
+</nav>
 </header>
 
 
